Loader added and bug fixing

--- a/style.css
+++ b/style.css
@@ -45,3 +45,53 @@ table .action{
 .modal-body .note-submit{
     float: right;
 }
+
+.loader-wrapper{
+    width: 100vw;
+    height: 110vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fefefea3;
+    z-index: 9999;
+    visibility: hidden;
+}
+
+.loader{
+    width: 50px;
+    aspect-ratio: 1;
+    display: grid;
+    
+    border: 4px solid #0000;
+    border-radius: 50%;
+    border-color: #ccc #0000;
+    animation: l16 1s infinite linear;
+  }
+  .loader::before,
+  .loader::after {    
+    content: "";
+    grid-area: 1/1;
+    margin: 2px;
+    border: inherit;
+    border-radius: 50%;
+  }
+  .loader::before {
+    border-color: #f03355 #0000;
+    animation: inherit; 
+    animation-duration: .5s;
+    animation-direction: reverse;
+  }
+  .loader::after {
+    margin: 8px;
+  }
+  @keyframes l16 { 
+    100%{transform: rotate(1turn)}
+  }
+
+  div.dt-container select.dt-input {
+    padding: 5px;
+    margin-right: 7px;
+}
